--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="adb_pairing_tutorial_content_input_pairing_code">Tap \"Pair device with pairing code\", the system will show a dialog with a six-digit pairing code. You will be able to enter the code in the notification to complete pairing.</string>
     <string name="adb_pairing_tutorial_content_bad_system">On some systems, the divider of the \"Wireless debugging\" option is removed, so you may not know you can to enter the \"Wireless debugging\" page by tapping the left part of the option.</string>
     <string name="adb_pairing_tutorial_content_notification_blocked">The pairing process needs you to interact with a notification from Shizuku. Please allow Shizuku to post notifications.</string>
+    <string name="adb_pairing_tutorial_content_miui">You are using MIUI. If there is no input button on the notification, you will need to switch notification style to \"Android\" from \"Notification\" - \"Notification shade\" in system settings.</string>
 
     <!-- Home - Root -->
     <string name="home_root_title"><![CDATA[Start (for rooted devices)]]></string>
