PairingTutorialDialog is now an Activity

--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="adb_pairing_tutorial_content_notification_blocked">The pairing process needs you to interact with a notification from Shizuku. Please allow Shizuku to post notifications.</string>
     <string name="adb_pairing_tutorial_content_miui">MIUI users may need to switch notification style to \"Android\" from \"Notification\" - \"Notification shade\" in system settings.</string>
     <string name="adb_pairing_tutorial_content_samsung">Samsung users may not able to find that tapping the left part of the \"Wireless debugging\" option will open \"Wireless debugging\" page.</string>
+    <string name="adb_pairing_tutorial_open_website">Step-by-step guide</string>
+    <string name="adb_pairing_tutorial_content_finish">Back to Shizuku and start Shizuku.</string>
 
     <!-- Home - Root -->
     <string name="home_root_title"><![CDATA[Start (for rooted devices)]]></string>
