--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -125,5 +125,6 @@
     <string name="adb_pairing_tutorial_content_network">Shizuku 需要访问本地网络。它由网络权限控制。</string>
     <string name="adb_pairing_tutorial_content_network_limation_not_foreground">某些系统（例如 MIUI）不允许应用在不可见时访问网络，即使应用已按标准使用前台服务。请在此类系统上为 Shizuku 禁用电池优化功能。</string>
     <string name="settings_use_system_color">使用系统主题颜色</string>
+    <string name="home_app_management_empty">已请求或声明 Shizuku 的应用程序将显示在此处。</string>
 
 </resources>
