--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <!-- Home - Status -->
     <string name="home_status_service_is_running">%1$s is running</string>
-    <string name="home_status_service_not_running">%1$s not running</string>
+    <string name="home_status_service_not_running">%1$s is not running</string>
     <string name="home_status_service_version">Version %2$s, %1$s</string>
     <string name="home_status_service_version_update"><![CDATA[Version %2$s, %1$s<br>Start again to update to version %3$s]]></string>
 
